# vzebra

./: .dockerignore  .gitignore  .prettierrc  AI_CONTEXT.md  CLAUDE.md  Dockerfile  README.md  SETUP_GPU.md  SOFAR.md  docker-compose.yml  generate_paper_figures.py  manuscript.tex  manuscript2.tex  migrate.sh  pyproject.toml  references.bib  requirements.txt
atlas/: MPIN-Atlas_brain_region_Combined_brain_regions_index.csv  colormap_roinames.json  faces_vertices.vtp  pure_vtk_zebraatlas.py  qzeb_anato.py  synapse_viz.py  zebraatlas.py
deploy/: nginx-vzebra.conf  setup-server.sh  vzebra-webhook.service  webhook_server.py
docs/: CLAUDE.md  MEMORY.md  activeinference.tex
old/: CHANGES_SUMMARY.md  CLASSIFIER_GUIDED_POLICY.md  TRAINING_README.md  atlas_bilateral.csv  centroids.csv  dataset_builder.py  debug_features.py  eval_agent_behavior.py  evaluate_classifier.py  fibtest.py  hebbian_learning.py  make_topology_from_centroids.py  mnist_senn_snn_mps.py  mnist_zebra5_snn.py  mnist_zebra_perception_action.py  model_final.pt  model_phase1_global.pt  model_phase2_local.pt  model_phase3_readout.pt  moving_entity_world.py  my2.py  mytest.py  pcsnn_dopamine_valence_pursuit_v12_2c_balanced.py  predictive_coding_zebra.py  prey_predator_env.py  qzeb_basic.py  qzeb_monitor.py  qzeb_physio.py  qzeb_platform.py  qzeb_play.py  qzeb_qviz.py  qzeb_seaworld.py  qzeb_vtkutil.py  qzeb_zanato.py  qzeb_zebra.py  qzebtime_test.py  qzebworld_test.py  run_sim.py  seaworld.py  senn_local.py  (+34 more)
paper/: main.tex
vzlab/: TECHNICAL_NOTE.tex
zebra_v60/: __init__.py  paper_v60.aux  paper_v60.out  paper_v60.tex  paper_v60.toc
zebrav1/: __init__.py  paper.aux  paper.out  paper.tex  paper.toc
zebrav2/: ARCHITECTURE.md  __init__.py  batch.py  cli.py  paper_v2.aux  (+11 more)
(+530 files in other folders)
